export const snapshot = {};

snapshot[`validation create jvar 1`] = `
stdout:
"ID: 1
URL: http://example.com/web/validations/1
DB: JVar
Created: 2024-01-02 12:04:56
Started: 2024-01-02 12:04:56
Finished: 2024-01-02 12:04:57
Progress: finished
Validity: valid
Submission: X-1

Results:
Object File         Validity
_base  -            valid   
Excel  path/to/file valid   
"
stderr:
""
`;

snapshot[`valiadation list 1`] = `
stdout:
"ID DB   Created             Started             Finished            Progress Validity Submission
-- --   -------             -------             --------            -------- -------- ----------
1  JVar 2024-01-02 12:04:56 2024-01-02 12:04:56 2024-01-02 12:04:57 finished valid    X-1       
2  JVar 2024-01-02 12:04:56 -                   -                   waiting  -        -         
"
stderr:
""
`;

snapshot[`validation show 1 1`] = `
stdout:
"ID: 1
URL: http://example.com/web/validations/1
DB: JVar
Created: 2024-01-02 12:04:56
Started: 2024-01-02 12:04:56
Finished: 2024-01-02 12:04:57
Progress: finished
Validity: valid
Submission: X-1

Results:
Object File         Validity
_base  -            valid   
Excel  path/to/file valid   
"
stderr:
""
`;

snapshot[`validation show 2 1`] = `
stdout:
"ID: 2
URL: http://example.com/web/validations/2
DB: JVar
Created: 2024-01-02 12:04:56
Started: -
Finished: -
Progress: waiting
Validity: -
Submission: -

Results:
Object File         Validity
_base  -            -       
Excel  path/to/file -       
"
stderr:
""
`;

snapshot[`validation get-file 1 path/to/file 1`] = `
stdout:
"foo
"
stderr:
""
`;

snapshot[`validation cancel 1 1`] = `
stdout:
'{
  "message": "Validation canceled successfully."
}
'
stderr:
""
`;
